Made more tests work